--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 .sidebar {
     background-color: rgb(238, 231, 231);
-    width: 234px;
+    width: 198px;
     transition: transform 0.3s ease-in;
     height: 100vh;
     position: absolute;
@@ -52,6 +52,7 @@
     height: 56vh;
     width: 78vw;
     margin: 100px auto;
+    margin-left: 146px;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -121,6 +122,7 @@
 .contactform {
     padding: 0 30px;
     padding-top: 123px;
+    margin-left: 146px;
     font-family: 'Libre Caslon Text', serif;
 }
 
@@ -160,9 +162,12 @@
     margin: 9px;
     font-family: 'Libre Caslon Text', serif;
 }
+.blogcontainer {
+    margin-left: 146px;
+}
 
 .blogitem {
-    margin: 14px;
+    margin-left: 14px;
 }
 
 .blogitem h3 {
@@ -182,8 +187,10 @@
 
 .myintro p {
     font-family: 'Source Code Pro', monospace;
-    margin: 14px;
-
+    margin-left: 14px;
+}
+.myintro  {
+    margin-left: 146px;
 }
 
 .skillcontainer {
